https://github.com/Aylton-dev/Formulario-2.git

--- a/style.css
+++ b/style.css
@@ -8,6 +8,11 @@
     height: 55px;
 
 }
+.bloco-cadastro{
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
 .Login{
     display: block;
     width: 100%;
