--- a/style.css
+++ b/style.css
@@ -16,6 +16,14 @@
 }
 .senha-cadastro{
     text-align: center;
+    margin-bottom: 10px;
+}
+.botao{
+    align-items: center;
+    margin-bottom: 10px;
+}
+.cancelar{
+    align-items: center;
 }
 
 
