https://github.com/Aylton-dev/Formulario-2.git

--- a/style.css
+++ b/style.css
@@ -19,11 +19,11 @@
     margin-bottom: 10px;
 }
 .botao{
-    align-items: center;
+    text-align: center;
     margin-bottom: 10px;
 }
 .cancelar{
-    align-items: center;
+    text-align: center;
 }
 
 
