https://github.com/Aylton-dev/Formulario-2.git

--- a/style.css
+++ b/style.css
@@ -19,9 +19,9 @@
     margin-bottom: 10px;
 }
 .botao{
-    
+    display: inline-block;
     text-align: center;
-    
+    margin: 10px;
 }
 .cancelar{
     text-align: center;
