--- a/style.css
+++ b/style.css
@@ -21,7 +21,8 @@
 .botao{
     display: inline-block;
     text-align: center;
-    
+    width: 100%;
+    margin: 10px;
 }
 .cancelar{
     text-align: center;
