https://github.com/Aylton-dev/Formulario-2.git

--- a/style.css
+++ b/style.css
@@ -19,10 +19,12 @@
     margin-bottom: 10px;
 }
 .botao{
-    display: inline-block;
-
+    text-align: center;
+    width: 100%;
+    margin: 10px;
 }
 .cancelar{
+    text-align: center;
 }
 
 
