--- a/style.css
+++ b/style.css
@@ -18,6 +18,10 @@
     text-align: center;
     margin-bottom: 10px;
 }
+.organize{
+    display: inline-block;
+    text-align: center;
+}
 .botao{
     text-align: center;
     width: 100%;
