https://github.com/Aylton-dev/Formulario-2.git

--- a/style.css
+++ b/style.css
@@ -21,14 +21,10 @@
 .organize{
     display: flex;
     gap: 5px;
+    justify-content: center;
+    align-items: center;
 }
-.botao{
-    text-align: center;
-    width: 100%;
-}
-.cancelar{
-    text-align: center;
-}
+
 
 
 
