--- a/style.css
+++ b/style.css
@@ -23,6 +23,11 @@
     gap: 5px;
     justify-content: center;
     align-items: center;
+    margin-bottom: 10px;
+}
+.redefinir{
+    text-decoration: none;
+    text-align: center;
 }
 
 
