--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+.centraliza{
+    text-align: center;
+    justify-content: center;
+    align-content: center;
+}
 .logomarca{
     display: flex;
     justify-content: center;
