--- a/style.css
+++ b/style.css
@@ -9,6 +9,9 @@
     height: 105px;
     margin-bottom: 20px;
 }
+.Login:hover{
+    box-shadow: rgba(100, 100, 255, 0);
+}
 .Login{
     display: block;
     text-align: center;
