--- a/style.css
+++ b/style.css
@@ -9,8 +9,9 @@
     height: 105px;
     margin-bottom: 20px;
 }
-.Login:hover{
-    box-shadow: rgba(100, 100, 255, 0);
+.bloco-cadastro{
+    border-radius: 5px;
+    box-shadow: rgba(81, 180, 236, 0.904);
 }
 .Login{
     display: block;
