--- a/style.css
+++ b/style.css
@@ -9,8 +9,8 @@
     height: 105px;
     margin-bottom: 20px;
 }
-input[type="e-mail"]
-input[type="password"]{
+.bloco-cadastro{
+    width: 100%;
     font-size: 16px;
     border: 1px solid#ccc;
     border-radius: 5px;
