--- a/style.css
+++ b/style.css
@@ -10,9 +10,11 @@
     margin-bottom: 20px;
 }
 .bloco-cadastro{
-    width: 100%;
+    width: 350px;
+    padding: 10px;
+    background-color: #ccc;
     font-size: 16px;
-    border: 1px solid#ccc;
+    border: 1px solid #ccc;
     border-radius: 5px;
 }
 .Login{
