--- a/style.css
+++ b/style.css
@@ -16,10 +16,12 @@
     font-size: 16px;
     border: 1px solid #ccc;
     border-radius: 5px;
+    justify-content: center;
 }
 .Login{
     display: block;
     text-align: center;
+    align-items: center;
     width: 100%;
     margin-bottom: 10px;
 }
