--- a/style.css
+++ b/style.css
@@ -10,14 +10,15 @@
     margin-bottom: 20px;
 }
 .bloco-cadastro{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 350px;
     padding: 10px;
     background-color: #ccc;
     font-size: 16px;
     border: 1px solid #ccc;
     border-radius: 5px;
-    justify-content: center;
-    align-items: center;
 }
 .Login{
     display: block;
