--- a/style.css
+++ b/style.css
@@ -30,6 +30,10 @@
     text-decoration: none;
     text-align: center;
 }
+.botao{
+    background-color: rgb(51, 51, 247);
+    border-radius: 5px;
+}
 
 
 
