--- a/style.css
+++ b/style.css
@@ -30,9 +30,8 @@
     text-decoration: none;
     text-align: center;
 }
-.botao{
-    background-color: rgb(51, 51, 247);
-    border-radius: 5px;
+.button{
+    background-color: blue;
 }
 
 
