--- a/style.css
+++ b/style.css
@@ -30,6 +30,11 @@
     text-decoration: none;
     text-align: center;
 }
+.botao-entrar{
+    border-radius: 5px;
+    background-color: blue;
+    box-shadow: rgb(72, 74, 227);
+}
 
 
 
