https://github.com/Aylton-dev/Formulario-2.git

--- a/style.css
+++ b/style.css
@@ -35,6 +35,11 @@
     background-color: blue;
     box-shadow: rgb(72, 74, 227);
 }
+button{
+     border-radius: 5px;
+    background-color: blue;
+    box-shadow: rgb(72, 74, 227);
+}
 
 
 
