--- a/style.css
+++ b/style.css
@@ -30,9 +30,10 @@
     text-decoration: none;
     text-align: center;
 }
-.entrar{
+.botao-entrar{
     border-radius: 5px;
-    box-shadow: rgb(72, 74, 227);
+    box-shadow: rgba(72, 180, 243, 0.952);
+    text-decoration: none;
 }
 
 
