--- a/style.css
+++ b/style.css
@@ -30,10 +30,8 @@
     text-decoration: none;
     text-align: center;
 }
-.botao-entrar{
-    border-radius: 5px;
-    box-shadow: rgba(72, 180, 243, 0.952);
-    text-decoration: none;
+.entrar{
+    border-radius: 6px;
 }
 
 
