--- a/style.css
+++ b/style.css
@@ -9,13 +9,13 @@
     height: 105px;
     margin-bottom: 20px;
 }
-.Login{
+.login-cadastro{
     display: block;
     text-align: center;
     width: 100%;
     margin-bottom: 10px;
 }
-.senha-cadastro{
+.senha_cadastro{
     text-align: center;
     margin-bottom: 10px;
 }
@@ -33,7 +33,7 @@
 .entrar{
     border-radius: 6px;
     background-color: rgb(43, 43, 231);
-    text-decoration: white;
+    
 }
 
 
