https://github.com/Aylton-dev/Formulario-2.git

--- a/style.css
+++ b/style.css
@@ -9,13 +9,13 @@
     height: 105px;
     margin-bottom: 20px;
 }
-.login-cadastro{
+.Login{
     display: block;
     text-align: center;
     width: 100%;
     margin-bottom: 10px;
 }
-.senha_cadastro{
+.senha-cadastro{
     text-align: center;
     margin-bottom: 10px;
 }
