--- a/style.css
+++ b/style.css
@@ -10,6 +10,11 @@
     align-items: center;
     height: 450px;
 }
+.cadastro{
+    display: block;
+    text-align: center;
+    justify-items: center;
+}
 
 
 
