--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 .logo{
     width: 450px;
     height: 150px;
+    margin-bottom: -15px;
 }
 .aqua{
     display: flex;
@@ -13,7 +14,9 @@
     display: block;
     text-align: center;
     justify-items: center;
-    margin-bottom: -10px;
+}
+.login-cadastro{
+    margin-bottom: 5px;
 }
 
 
