--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
     display: block;
     text-align: center;
     justify-items: center;
+    height: 350px;
 }
 .login-cadastro{
     margin-bottom: 5px;
