https://github.com/Aylton-dev/Formulario-2.git

--- a/style.css
+++ b/style.css
@@ -14,10 +14,11 @@
     display: block;
     text-align: center;
     justify-items: center;
-    border-radius: 5px;
 }
 .login-cadastro{
     margin-bottom: 5px;
+    border-radius: 5px;
+    background-color: rgb(222, 222, 222);
 }
 
 
