--- a/style.css
+++ b/style.css
@@ -10,15 +10,17 @@
     align-items: center;
     height: 450px;
 }
-.cadastro{
+
+.login-cadastro{
     display: block;
     text-align: center;
     justify-items: center;
-}
-.login-cadastro{
     margin-bottom: 5px;
-    border-radius: 5px;
-    background-color: rgb(222, 222, 222);
+}
+.senha-cadastro{
+    display: block;
+    text-align: center;
+    justify-items: center;
 }
 
 
