--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@
 .botoes{
     display: inline-block;
     text-align: center;
-    justify-content: center;
+    align-items: center;
     gap: 5px;
 }
 
