--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@
 }
 .botoes{
     display: inline-block;
-    text-align: center;
+    justify-content: center;
     align-items: center;
     gap: 5px;
 }
