--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@
     display: block;
     text-align: center;
     justify-items: center;
+    margin-top: -20px;
     margin-bottom: 5px;
 }
 .senha-cadastro{
