--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
     display: block;
     text-align: center;
     justify-items: center;
-    margin-top: -40px;
+    margin-top: -50px;
     margin-bottom: 5px;
 }
 .senha-cadastro{
@@ -29,6 +29,10 @@
     justify-content: center;
     align-items: center;
     gap: 5px;
+}
+input{
+    border-radius: 6px;
+    background-color: gainsboro;
 }
 
 
