--- a/style.css
+++ b/style.css
@@ -32,7 +32,8 @@
 }
 input{
     border-radius: 6px;
-    background-color: gainsboro;
+    background-color: rgb(238, 238, 238);
+    box-shadow: 0px 0px 15px rgb(29, 159, 240);
 }
 
 
