--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@
 input{
     border-radius: 6px;
     background-color: rgb(238, 238, 238);
-    box-shadow: 0px 0px 10px 2px rgb(21, 79, 115);
+    border-color: rgb(35, 96, 183);
 }
 
 
