--- a/style.css
+++ b/style.css
@@ -55,21 +55,22 @@ h2{
     height: 175px;
 }
 .nome_produto{
-    display: block;
-    text-align: center;
-    justify-content: center;
+    display: flex;
+    justify-content: center; 
+    align-items: center;
     margin-top: -50px;
     margin-bottom: 5px;
 }
 .tipo-produto{
-    display: block;
-    text-align: center;
-    justify-content: center;
+    display: flex;
+    justify-content: center; 
+    align-items: center;
+    margin: auto;
 }
 .codigo-produto{
-    display: block;
-    text-align: center;
-    justify-content: center;
+    display: flex;
+    justify-content: center; 
+    align-items: center;
     margin-bottom: 20px;
 }
 
