--- a/style.css
+++ b/style.css
@@ -63,14 +63,12 @@ h2{
 }
 .tipo-produto{
     display: flex;
-    justify-content: center; 
-    align-items: center;
-    margin: auto;
+    text-align: center;
+    margin-bottom: 5px;
 }
 .codigo-produto{
     display: flex;
-    justify-content: center; 
-    align-items: center;
+    text-align: center;
     margin-bottom: 20px;
 }
 
