--- a/style.css
+++ b/style.css
@@ -59,13 +59,13 @@ h2{
     text-align: center;
     justify-items: center;
     margin-top: -50px;
-    margin-bottom: 5px;
+    margin-bottom: 20px;
 }
 .tipo_produto{
     display: block;
     text-align: center;
     justify-items: center;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
 }
 .codigo_produto{
     display: block;
@@ -85,11 +85,11 @@ ul{
     padding: 0;
     margin: 0;
     text-align: right;
-    width: 100%;
+    width: 150px;
 }
 ul li a{
     text-decoration: none;
-    color: rgb(184, 184, 184);
+    color: rgb(105, 105, 105);
     padding: 5px 10px;
     display: inline-block;
 }
