--- a/style.css
+++ b/style.css
@@ -93,5 +93,12 @@ ul li a{
     padding: 5px 10px;
     display: inline-block;
 }
+.redefinir{
+    display: flex;
+    text-align: center;
+    text-decoration: none;
+    color: blue;
+    margin-top: 15px;
+}
 
 
