--- a/style.css
+++ b/style.css
@@ -83,22 +83,28 @@ h2{
 ul{
     list-style-type: none;
     padding: 0;
-    margin: 0;
+    margin-bottom: 15px;
     text-align: right;
     width: 150px;
 }
-ul li a{
+ul li .sair{
     text-decoration: none;
     color: rgb(105, 105, 105);
     padding: 5px 10px;
     display: inline-block;
 }
-.redefinir{
+ul{
     display: flex;
     text-align: center;
+    list-style-type: none;
+    padding: 0;
+    margin-top: 15px;
+    width: 150px;
+}
+ul li .redefinir{
     text-decoration: none;
     color: blue;
-    margin-top: 10px;
+    padding: 5px 10px;
 }
 
 
