--- a/style.css
+++ b/style.css
@@ -87,24 +87,12 @@ ul{
     text-align: right;
     width: 150px;
 }
-ul li .sair{
+ul li a{
     text-decoration: none;
     color: rgb(105, 105, 105);
     padding: 5px 10px;
     display: inline-block;
 }
-ul{
-    display: flex;
-    text-align: center;
-    list-style-type: none;
-    padding: 0;
-    margin-top: 15px;
-    width: 150px;
-}
-ul li .redefinir{
-    text-decoration: none;
-    color: blue;
-    padding: 5px 10px;
-}
+
 
 
