--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ h2{
 ul{
     list-style-type: none;
     padding: 0;
-    margin: auto;
+    margin: 0;
     text-align: right;
     width: 150px;
 }
