--- a/style.css
+++ b/style.css
@@ -82,10 +82,10 @@ h2{
 }
 ul{
     display: flex;
+    text-align: left;
     list-style-type: none;
     padding: 0;
     margin: 0;
-    text-align: right;
     width: 150px;
 }
 ul li a{
