--- a/style.css
+++ b/style.css
@@ -81,8 +81,8 @@ h2{
     cursor: pointer;
 }
 ul{
-    display: flex;
-    text-align: left;
+    display: inline-block;
+    text-align: right;
     list-style-type: none;
     padding: 0;
     margin: 0;
