--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ ul{
     list-style-type: none;
     padding: 0;
     margin: 0;
-    width: 150px;
+    width: 100%;
 }
 ul li a{
     text-decoration: none;
