--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ ul{
     margin: 0;
     width: 100%;
 }
-ul li a{
+ul li .sair{
     text-decoration: none;
     color: rgb(105, 105, 105);
     padding: 5px 10px;
