--- a/style.css
+++ b/style.css
@@ -94,10 +94,11 @@ ul li .sair{
     padding: 5px 10px;
 }
 .redefinir{
-    display: flex;
+    display: inline-block;
     text-align: center;
     color: blue;
-    margin-top: 30px;
+    margin-top: 45px;
+    text-decoration: none;
 }
 
 
