--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ h2{
     color: #fff;
     cursor: pointer;
 }
-ul{
+.ul-cadastro{
     display: inline-block;
     text-align: right;
     list-style-type: none;
@@ -88,12 +88,17 @@ ul{
     margin: 0;
     width: 100%;
 }
-ul li .sair{
+.ul-cadastro li .sair{
     text-decoration: none;
     color: rgb(105, 105, 105);
     padding: 5px 10px;
 }
-.redefinir{
+.ul-login{
+    display: inline-block;
+    text-align: center;
+    margin-top: 45px;
+}
+.ul-login li .redefinir{
     display: inline-block;
     text-align: center;
     color: blue;
