--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ h2{
     margin: 0;
     width: 100%;
 }
-.ul-cadastro li .sair{
+.ul-cadastro .li-cadastro .sair{
     text-decoration: none;
     color: rgb(105, 105, 105);
     padding: 5px 10px;
@@ -98,9 +98,7 @@ h2{
     text-align: center;
     margin-top: 45px;
 }
-.ul-login li .redefinir{
-    display: inline-block;
-    text-align: center;
+.ul-login .li-login .redefinir{
     color: blue;
     margin-top: 45px;
     text-decoration: none;
