--- a/style.css
+++ b/style.css
@@ -96,11 +96,12 @@ h2{
 .ul-login{
     display: inline-block;
     text-align: center;
+    list-style-type: none;
     margin-top: 45px;
+    width: 100%;
 }
 .ul-login .li-login .redefinir{
     color: blue;
-    margin-top: 45px;
     text-decoration: none;
 }
 
